--- a/CHANGELOG
+++ b/CHANGELOG
@@ -13,12 +13,12 @@ Added: support for converters for main parameters (e.g. List<HostPort>).
 1.4
 2010/07/28
 
-Added string converter factories
-Added IDefaultProvider
-Added PropertyFileDefaultProvider
-Usage is now showing required parameters and default value
-Support for values that look like parameters ("-integer -3", "/file /tmp/a")
-Added @Parameters(optionPrefixes) to allow for different prefixes than "-"
+Added: string converter factories
+Added: IDefaultProvider
+Added: PropertyFileDefaultProvider
+Added: Usage is now showing required parameters and default value
+Added: Support for values that look like parameters ("-integer -3", "/file /tmp/a")
+Added: @Parameters(optionPrefixes) to allow for different prefixes than "-"
 
 1.2
 2010/07/25
