--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,10 @@
 Current
 
+1.14
+2011/01/24
+
 Added: Added a constructor that takes a Bundle only, https://github.com/cbeust/jcommander/pull/47 (Russell Egan)
+Fixed: NPE with calling getCommandDescription() of an unknown command
 
 1.13
 2010/12/15
