--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,7 @@ Added: Support for delegating parameter definitions to child classes (rodionmois
 Added: @Parameter(commandNames) so that command names can be specified with annotations
 Added: Support for enums (Adrian Muraru)
 Fixed: Throw if an unknown option is found
+Fixed: Main parameters are now validated as well (Connor Mullen)
 
 1.19
 2011/10/10
