Added support for option groups in usage output and some other fixes.
Added an 'optionGroupName' parameter to the @Parameters annotation to indicate that all options in the annotated class should be displayed as a separate group of options at the end of usage output. The output is consistent for both complete usage and command specific usage.

Classes declaring an option group will also include all delegated parameters by default, unless they are explicitly re-declared as part of another option group. Combining option groups with delegated parameters can be useful to remove duplicate option descriptions.

Other Fixes:
1. It appears that java.util.Bundle throws an exception (instead of returning null as the usage of it implies), which means that all i18n-able parameters have to have a valid key. Leaving an parameter with the default empty-string key throws an exception.

2. Bundle object was not being passed down to JCommander objects for commands, and therefore any keys specified in command description or any command parameters failed to be looked up.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -8,6 +8,9 @@ Added: @Parameter(commandNames) so that command names can be specified with anno
 Added: Support for enums (Adrian Muraru)
 Fixed: Throw if an unknown option is found
 Fixed: Main parameters are now validated as well (Connor Mullen)
+Added: Support for option groups in usage output (rodionmoiseev)
+Fixed: Passing bundle to constructor causes error when no key command description is given (rodionmoiseev)
+Fixed: Command description and options fail to lookup key in the bundle (rodionmoiseev)
 
 1.19
 2011/10/10
