--- a/src/test/resources/MessageBundle_en_US.properties
+++ b/src/test/resources/MessageBundle_en_US.properties
@@ -16,4 +16,7 @@
 # limitations under the License.
 #
 
+commands.testCmd = Test command
+commands.testCmd.debug = Enable debugging
 host = Host
+optionGroups.help = Help related options
