--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 Current
 
+Added: @DynamicParameter
 Fixed: Use JDK 6 Console() when available to improve support of non ascii chars (Julien Henry)
 
 1.20
