fix example code for 5. Main parameter #450

--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -599,7 +599,7 @@ will allow you to parse:
 
 [source,bash]
 ----
-$ java Main -debug file1 file2
+$ java Main -debug 2 file1 file2
 ----
 
 and the field files will receive the strings `"file1"` and `"file2"`.
